# llm-at-home

./: .agentflow.default.env  .env  .env.capybara25mistral.old  .env.starling.old  .gitignore  .llamacpp.env  .prometheus.config  Dockerfile  README.md  awq_quantize.py  compose.agentflow.yaml  compose.aphrodite.yaml  compose.llamacpp.yaml  compose.lmdeploy.yaml  compose.original.yaml  compose.sglang.yaml  compose.tabbyapi.yaml  compose.tgi.yaml  compose.vllm.yaml  compose.yaml  example_vllm_request.json  gen_server.py  justfile  llama-3.2-chat-template.txt  mixtral11x2.env.old  openchat.env.old  opennectar.env.old  tenyx.env.old  train_dpo.ipynb  train_model.ipynb  vllm.nightly.DockerFile  vllmrun.sh  weird_request.py
agentflow-rs/: Cargo.toml
agentflow-rs/agentflow/: Cargo.toml
agentflow-rs/agentflow/src/: agent.rs  agents.rs  cells.rs  conversation.rs  lib.rs  main.rs
agentflow-rs/cellflow/: Cargo.toml
agentflow-rs/cellflow/src/: cell.rs  cell_handler.rs  ifcell.rs  lib.rs  runner.rs  sequencecell.rs  typed_cell.rs  visitor.rs  whilecell.rs
agentflow-rs/example/: Cargo.toml
agentflow-rs/example/src/: main.rs
agents-oai/: main.py  manager.py  model.py  planner_agent.py  pyproject.toml  search_agent.py  writer_agent.py
agents-oai/agents/: responding_agent.py
agents-oai/src/: chat_loop.py  config.py  context.py  main.py  manager.py  mcp_registry.py  model.py  output.py  search_agent.py
agents-oai/src/agent_definitions/: math_agent.py  react.py  reason_tool.py  research_agent.py  responding_agent.py
agents-oai/src/agents/: research_agent.py  responding_agent.py
agents-server/: .env.template  .gitignore  main.py  pyproject.toml  tool_history_purge.py
agents-server/agents_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agents-server/tools/: SearchAndScrape.py
agents-smolagents/: pyproject.toml
chat-ui/: .env  (+2 more)
game/: data.json  data_loader.py  gamestate.py  main.py  notes.md  pyproject.toml  wikipedia.py
game/generate_text/: gen_1_exclamation.py  gen_1_story.txt  sanitize_names.py
graphs-server/: Cargo.toml
graphs-server/graphs/src/: lib.rs
graphs/graphs-examples/: Cargo.toml
graphs/graphs-examples/src/: _toolcallexamplefrommistral.json  invoke_tool.rs  main.rs  sample_tool.rs  weather_tool.rs  weathertool-1.json
graphs/graphs-mcp/: Cargo.toml
graphs/graphs-mcp/src/: lib.rs  mcp_tool.rs
graphs/openai-model/: Cargo.toml
graphs/openai-model/src/: lib.rs
infer/: .gitignore  Cargo.toml  notes.md
infer/chat/: Cargo.toml
infer/chat/src/: history.rs  jinjarender.rs  lib.rs  turn_format.rs
infer/chat_formats/: Cargo.toml
infer/chat_formats/src/: lib.rs
infer/eval/: Cargo.toml
infer/eval/src/: README.md  exam.rs  main.rs  problems.rs
infer/functions/: Cargo.toml
infer/functions/src/: lib.rs  no_op.rs  search_web.rs
infer/libinfer/: Cargo.toml
infer/libinfer/src/: chat_client.rs  document.rs  embeddings.rs  function.rs  generate_request.rs  info.rs  lib.rs  llm_client.rs
infer/model_client/: Cargo.toml
infer/model_client/src/: lib.rs
infer/openai_client/: Cargo.toml
infer/openai_client/src/: info.rs  lib.rs  request.rs  response.rs
infer/prompts/: action_selection_new_assistant.txt  action_selection_new_user.txt  system.txt
infer/runner/: Cargo.toml
infer/runner/src/: api.rs  chat_loop.rs  formats.rs  function_selection.rs  main.rs  openai_server.rs
infer/tgi_client/: Cargo.toml
infer/tgi_client/src/: info.rs  lib.rs
langgraph-server/: main.py  pyproject.toml
langgraph-server/src/: custom_react.py  main.py  model.py
langgraph-server/src/tools/: code_execution_tool.py  (+1 more)
pydantic-server/: compose.yaml  joke_example.py  main.py  pyproject.toml
pydantic-server/agents/: tool_calling_agent.py  tool_routing_agent.py  user_facing_assistant.py
pydantic-server/outputs/: 0_Let It Be (Remastered 2009).txt  10_In My Life (Remastered 2009).txt  11_Ob-La-Di, Ob-La-Da (Remastered 2009).txt  12_Now And Then.txt  13_Twist And Shout (Remastered 2009).txt  14_Yellow Submarine (Remastered 2009).txt  15_Penny Lane (Remastered 2009).txt  16_Strawberry Fields Forever (Remastered 2009).txt  17_Hello, Goodbye (Remastered 2009).txt  18_Yesterday (Remastered 2009).txt  19_We Can Work It Out (Remastered 2009).txt  1_Here Comes The Sun (Remastered 2009).txt  20_Blackbird (Remastered 2009).txt  21_Eleanor Rigby (Remastered 2009).txt  22_I Want To Hold Your Hand.txt  23_A Day In The Life.txt  24_Love Me Do (Remastered 2009).txt  25_I Saw Her Standing There (Remastered 2009).txt  26_Here, There And Everywhere (Remastered 2009).txt  27_Oh! Darling (Remastered 2009).txt  28_I Should Have Known Better (Remastered 2009).txt  29_Eight Days A Week (Remastered 2009).txt  2_Don’t Let Me Down (First Rooftop Performance).txt  30_While My Guitar Gently Weeps (Remastered 2009).txt  31_I Feel Fine (Remastered 2009).txt  32_Michelle (Remastered 2009).txt  33_Do You Want To Know A Secret (Remastered 2009).txt  34_Get Back (Remastered 2009).txt  35_The Ballad Of John And Yoko (Remastered 2009).txt  36_Anna (Go To Him) (Remastered 2009).txt  37_Lucy In The Sky With Diamonds.txt  38_All My Loving (Remastered 2009).txt  39_All You Need Is Love.txt  3_Come Together (Remastered 2009).txt  40_The Long And Winding Road (Remastered 2009).txt  41_I Want You (She's So Heavy) (Remastered 2009).txt  42_If I Fell (Remastered 2009).txt  43_While My Guitar Gently Weeps.txt  44_Day Tripper.txt  45_Hey Jude.txt  (+43 more)
pydantic-server/src/: calculation_agent.py  chat_loop.py  code_execution_tool.py  dj.py  google_search_tool.py  main.py  memory.py  model.py  research_agent.py  responding_assistant.py  state.py  visit_url_tool.py  wiki_tool.py
scraper/: Cargo.toml  Dockerfile
scraper/src/: main.rs  scrape.rs
transformers-serve/: Dockerfile  justfile  main.py  pyproject.toml
vibebot/: main.py  prompt.py  pyproject.toml  server.py  system_prompt.txt  vibe_bot_agent.py  vibe_examples.txt
vibebot/config/: vibe.txt  vibe_examples.txt
webprompt/: Cargo.toml  Dockerfile
webprompt/public/: index.html  script.js  style.css  styles.css
webprompt/src/: main.rs
(+372 files in other folders)
