[workspace]
resolver = "2"

members = [
    "cellflow",
    "example"
]

[workspace.lints.rust]
let-underscore = "warn"
future-incompatible = "warn"
refining-impl-trait = "warn"
rust-2024-compatibility = "warn"
rust-2018-idioms = "warn"

[workspace.lints.clippy]
pedantic = "warn"
perf = "warn"
correctness = "warn"
complexity = "warn"
nursery = "warn"
style = "warn"
suspicious = "warn"
