[project]
name = "agents-oai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-otel",
    "openai-agents[litellm]==0.2.11",
    "openai",
    "openinference-instrumentation-litellm",
    "openinference-instrumentation-openai-agents",
]
