[workspace]

resolver = "2"

members = [
    "model_client",
    "runner",
    "functions",
    "chat",
    "libinfer",
    "eval",
    "chat_formats"
]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
cargo = "warn"
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"