[project]
name = "langgraph-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix-otel>=0.9.0",
    "grandalf>=0.8",
    "langchain-openai>=0.3.11",
    "langgraph>=0.3.21",
    "openinference-instrumentation-langchain>=0.1.37",
    "openinference-instrumentation-openai>=0.1.22",
]
