[project]
name = "pydantic-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-ai==0.0.53",
    "pydantic-ai-slim[duckduckgo]==0.0.53",
    "arize-phoenix",
    "langchain-community>=0.3.21",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "openinference-instrumentation-openai>=0.1.23",
    "jinja2>=3.1.6",
    "wikipedia>=1.4.0",
    "langchain-google-community>=2.0.7",
    "chromadb-client>=1.0.0",
    "onnxruntime>=1.21.0",
    "chromadbx>=0.1.0",
]

[tool.ruff.lint]
# On top of the defaults (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
select = ["ALL"]
ignore = ["INP001", "D100", "D103", "TD003", "TD002", "FIX002", "FBT002", "FBT001", "D205", "D212", "D401", "D417", "E501", "D413", "D101", "DTZ005", "TRY003", "EM101", "PLR2004", "D102"]