[project]
name = "pydantic-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arize-phoenix",
    "langchain-community",
    "jinja2",
    "wikipedia",
    "langchain-google-community",
    "chromadb-client",
    "onnxruntime",
    "chromadbx",
    "duckduckgo-search",
    "pydantic-ai==0.3.3",
    "mcp[cli]",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "openinference-instrumentation-openai",
]

[tool.ruff.lint]
# On top of the defaults (`E4`, E7`, `E9`, and `F`), enable flake8-bugbear (`B`) and flake8-quotes (`Q`).
select = ["ALL"]
ignore = ["INP001", "D100", "D103", "TD003", "TD002", "FIX002", "FBT002", "FBT001", "D205", "D212", "D401", "D417", "E501", "D413", "D101", "DTZ005", "TRY003", "EM101", "PLR2004", "D102"]
