[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json"] }
readable-readability = "0.4"
axum = "0.8"
