[package]
name = "webprompt"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
log = "0.4"
env_logger = "0.11"
clap = { version = "4.5.8", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"
# missing_docs = "deny"

[lints.clippy]
cargo = "warn"
complexity = "warn"
correctness = "deny"
pedantic = "warn"
perf = "warn"
style = "warn"
suspicious = "warn"
