[package]
name = "graphs-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11"
graphs = { path = "../graphs" }
graphs-ai = { path = "../graphs-ai" }
graphs-mcp = { path = "../graphs-mcp" }
openai-model = { path = "../openai-model" }
log = "0.4"
schemars = "0.8"
serde_json = "1.0"

[lints]
workspace = true
