[package]
name = "graphs-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
graphs-ai = { path = "../graphs-ai" }
anyhow = "1.0"
tracing = "0.1"
rmcp = { version = "0.1", features = ["client",  "transport-sse"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
schemars = "0.8"
reqwest = { version = "0.12"  }

[lints]
workspace = true
