[package]
name = "openai-model"
version = "0.1.0"
edition = "2024"

[dependencies]
graphs = { path = "../graphs" }
graphs-ai = { path = "../graphs-ai" }
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }

[lints]
workspace = true
