[package]
name = "chat-formats"
version = "0.1.0"
edition = "2021"
description = "A crate containing chat formats"
license = "MIT"
repository = "https://github.com/andysalerno/infer"
readme = "README.md"
keywords = ["text-generation-inference"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chat = { path = "../chat" }
log = "0.4"

[lints]
workspace = true
