[package]
name = "eval"
version = "0.1.0"
edition = "2021"
description = "An executable for running the chat loop."
license = "MIT"
repository = "https://github.com/andysalerno/infer"
readme = "README.md"
keywords = ["text-generation-inference"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
model-client = { path = "../model_client" }
chat-formats = { path = "../chat_formats" }
libinfer = { path = "../libinfer" }
log = "0.4"
env_logger = "0.10"

[lints]
workspace = true
