[package]
name = "eval"
version = "0.1.0"
edition = "2021"
description = "An executable for running the chat loop."
license = "MIT"
repository = "https://github.com/andysalerno/infer"
readme = "README.md"
keywords = ["text-generation-inference"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tgi-client = { path = "../tgi_client" }
chat-formats = { path = "../chat_formats" }
libinfer = { path = "../libinfer" }
chat = { path = "../chat" }
log = "0.4"
derive_builder = "0.12"
env_logger = "0.10"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
