[package]
name = "functions"
version = "0.1.0"
edition = "2021"
description = "Contains function implementations, usable in the chat loop."
license = "MIT"
repository = "https://github.com/andysalerno/infer"
readme = "README.md"
keywords = ["text-generation-inference"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libinfer = { path = "../libinfer" }
chat = { path = "../chat" }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
ordered-float = "3.7"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
readable-readability = "0.4"

[lints]
workspace = true