[package]
name = "tgi-client"
version = "0.1.0"
edition = "2021"
description = "A text-generation-inference client."
license = "MIT"
repository = "https://github.com/andysalerno/infer"
readme = "README.md"
keywords = ["text-generation-inference"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
libinfer = { path = "../libinfer" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures-util = "0.3"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["json"] }
reqwest-eventsource = "0.5"

[lints]
workspace = true